# Plataforma_Capacitaciones

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LMS_Prompt_Documento_Necesidades.xml  README.md  SPEC.md  deploy-lan.sh  deploy.sh  docker-compose.dev.yml  docker-compose.lan.yml  docker-compose.prod.yml  docker-compose.yml  init-ssl.sh  package-lock.json  reporte_mejoras_UX.md  update.sh
backend/: Dockerfile  conftest.py  entrypoint.sh  pyproject.toml
backend/apps/ai_generator/: apps.py  exceptions.py  parsers.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/ai_generator/tests/: test_parsers.py  test_services.py  test_tasks.py
backend/apps/assessments/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/authentication/: ldap_backend.py  lockout.py  password_validators.py  serializers.py  services.py  urls.py  views.py
backend/apps/certificates/: services.py  tasks.py  urls.py  views.py
backend/apps/config/: apps.py  email.py  ldap.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/: exceptions.py  factories.py  urls.py  views.py
backend/apps/courses/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/notifications/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/reports/: audit.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/: ldap_sync.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  development.py  production.py  test.py
backend/requirements/: base.txt  development.txt  production.txt
backend/storage/: factory.py
backend/storage/backends/: base.py  local.py  sharepoint.py
docs/: estado_actual_sistema.md  (+5 more)
(+176 files in other folders)
